[gd_scene load_steps=10 format=3 uid="uid://cb74jb76vyru4"]

[ext_resource type="Script" uid="uid://cjrcynyvca5ey" path="res://stages/levels/level.gd" id="1_lti1v"]
[ext_resource type="Texture2D" uid="uid://ca0hfxqsnkd6e" path="res://assets/backgrounds/stop_sign.webp" id="2_dpevj"]
[ext_resource type="PackedScene" uid="uid://coanmt2qnu7dy" path="res://entities/goal/goal.tscn" id="3_w87v1"]
[ext_resource type="PackedScene" uid="uid://urr8bagcauuh" path="res://entities/player/player.tscn" id="4_euebl"]
[ext_resource type="PackedScene" uid="uid://be47gx5gdtrqr" path="res://entities/demerit_zone/demerit_zone.tscn" id="5_q3mwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nmem"]
size = Vector2(141.5, 149.9502)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmfkw"]
size = Vector2(892, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uojxv"]
size = Vector2(890.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nufpr"]
size = Vector2(20, 1000)

[node name="02" type="Node2D"]
script = ExtResource("1_lti1v")
test_description = "Stopping at an Intersection

Approach the intersection and stop at the stop sign."

[node name="01Background" type="Sprite2D" parent="."]
position = Vector2(593, 360)
texture = ExtResource("2_dpevj")

[node name="Goal" parent="." node_paths=PackedStringArray("player", "collision_shape") instance=ExtResource("3_w87v1")]
position = Vector2(669, 385)
player = NodePath("../Player")
goal_speed_threshold = 50.0
collision_shape = NodePath("GoalArea")
metadata/_edit_group_ = true

[node name="GoalArea" type="CollisionShape2D" parent="Goal"]
shape = SubResource("RectangleShape2D_3nmem")

[node name="Player" parent="." instance=ExtResource("4_euebl")]
position = Vector2(665, 641)
rotation = -1.5707964
scale = Vector2(1.1, 1.1)

[node name="DemeritZone" parent="." instance=ExtResource("5_q3mwf")]
position = Vector2(0, 20)

[node name="DisallowedArea" type="CollisionPolygon2D" parent="DemeritZone"]
polygon = PackedVector2Array(146, -98, 1043, -98, 1043, 806, 742, 806, 743, 277, 596, 277, 596, 701, 741, 701, 741, 806, 146, 806)

[node name="WorldBounds" type="Area2D" parent="."]

[node name="Bottom" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2(592, 837)
shape = SubResource("RectangleShape2D_lmfkw")

[node name="Top" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2(590.25, -89.00002)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_uojxv")

[node name="Left" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2(134, 375)
shape = SubResource("RectangleShape2D_nufpr")

[node name="Right" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2(1054, 375)
shape = SubResource("RectangleShape2D_nufpr")

[node name="Obstacles" type="Node2D" parent="."]

[connection signal="parked" from="Goal" to="." method="_on_parked"]
[connection signal="player_dead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="area_entered" from="DemeritZone" to="." method="_on_demerit_zone_area_entered"]
[connection signal="area_exited" from="DemeritZone" to="." method="_on_demerit_zone_area_exited"]
[connection signal="demerit" from="DemeritZone" to="." method="_on_demerit_zone_demerit"]
